For more information, check the README.md in http://github.com/i3visio/osrframework

v0.3.0, 2015/01/11 -- Added the extraction of regular expression with entify.
- Added entify v0.5.0 as part of OSRFramework to extract regular expressions.
- Inclusion of a --quiet option.
- Inclusion of transforms related to the extraction of entities.
- Minor changes in the name of entify transforms and i3visio.url has been moved to i3visio.uri.
- Changed the url.py module to uri.py. References changed everywhere.
- Added a short transformation of foo[at]bar[dot]com mails to be foo@bar.com.
- Fix on i3visio.object entity which was not being imported correctly.

v0.2.0, 2015/01/07 -- Added Maltego transforms.
- Added Maltego transform: aliasToSkypeAccounts.py
- Added Maltego transform: bitcoinAddressToBlockchainDetails.py
- Added Maltego transform: emailToBreachedAccounts.py
- Added Maltego transform: emailToSkypeAccounts.py
- Added Maltego transform: hashToMD5crackDotCom.py
- Added Maltego transform: expandPropertiesFromI3visioEntity.py
- Added entities and logos for Peercoin and Namecoin addresses.
- Removed i3visio.bitcoin, i3visio.litecoin, i3visio.dogecoin entities, as the i3visio.bitcoin.address (et al.) will be used.
- Added entities for i3visio.port, i3visio.domain and i3visio.protocol.
- Changed icon for i3visio.dni.
- Added an autoconfiguration file for Maltego Transforms.

v0.1.0, 2014/12/31 -- Initial release.
- Added a third-party API wrapper for Skype: checkIPDetails.py
- Added a third-party API wrapper for md5crack.com: checkIPDetails.py
- Added a third-party API wrapper for ip-api.com: checkIPDetails.py
- Added a third-party API wrapper for haveibeenpwned.com: checkIfEmailWasHacked.py
- Added a third-party API wrapper for blockchain.info: getBitcoinAddressDetails.py
- Initial release.
