@@ -57,9 +57,6 @@ class Email(RegexpObject):
         '''
         results = []
         
-        # An auxiliar object
-        aux = {}
-        
         if not '@' in found:    
             # character may be '@' or '.'
             for character in self.substitutionValues.keys():
@@ -67,19 +64,22 @@ class Email(RegexpObject):
                     # replacing '[at]' for '@'...
                     found=found.replace(value, character)
                 
-                # Building the auxiliar  email
-                aux["type"] = "i3visio.email"
-                aux["value"] = found
-                aux["attributes"] = []
-                results.append(aux)   
+            # Building the auxiliar  email
+            aux = {}
+            aux["type"] = "i3visio.email"
+            aux["value"] = found
+            aux["attributes"] = []
+            results.append(aux)   
         
         # Getting the information of the alias:
+        aux = {}
         aux["type"] = "i3visio.alias"
         aux["value"] = found.split('@')[0]
         aux["attributes"] = []
         results.append(aux)           
 
         # Getting the information of the domain:
+        aux = {}
         aux["type"] = "i3visio.domain"
         aux["value"] = found.split('@')[1]
         aux["attributes"] = []
